--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "startdev": "env-cmd -f ./.env-cmdrc -e dev nodemon server.js",
+    "dev": "env-cmd -e dev nodemon server.js",
+    "prod": "env-cmd -e prod nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +18,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.1.1",
-    "nodemon": "^2.0.22"
+    "nodemailer": "^6.9.2",
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
